fix: final fix of exam module for exam generation. Update question init stack